# pfp-api

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
pfp_api/: main.py  models.py  rdfproxy.py
pfp_api/queries/: __init__.py  person.rq
pfp_api/templates/: base.rq  person.j2  person.rq  persons.j2  persons.rq
pfp_api/templates/partials/: prefixes.rq
