[project]
authors = ["Birger Schacht <birger.schacht@oeaw.ac.at>"]
name = "pfp-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "rdfproxy>=0.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.6",
]
